--- a/Bets21/pom.xml
+++ b/Bets21/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>is2</groupId>
-	<artifactId>is2</artifactId>
+	<artifactId>Proba-Proiektua-SI2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<build>
@@ -53,10 +53,10 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 
-		<sonar.organization>change your data</sonar.organization>
+		<sonar.organization>mikel-oscoz-rivas</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.projectKey>change your data</sonar.projectKey>
-		<sonar.login>change your data</sonar.login>
+		<sonar.projectKey>MikelOscoz_Proba-Proiektua-SI2</sonar.projectKey>
+		<sonar.login>e4e6ed3195306721f582761fcdec2d7019996cfc</sonar.login>
 	</properties>
 
 	<!-- https://mvnrepository.com/artifact/junit/junit -->
