--- a/Bets21/.github/workflows/build.yml
+++ b/Bets21/.github/workflows/build.yml
@@ -33,4 +33,4 @@ restore-keys: ${{ runner.os }}-m2
 env:
 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-run: mvn -B clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+run: mvn -f Proba-Proiektua-SI2/Bets21/pom.xml -B clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
