--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+        run: mvn -f Proba-Proiektua-SI2/Bets21/pom.xml -B clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
